Closed Bug 346250 Opened 19 years ago Closed 19 years ago

nsDiskCacheMap.cpp closes wrong filedescriptor (when metadata is written to a separate file!)

Categories

(Core :: Networking: Cache, defect)

defect
Not set
normal

Tracking

()

VERIFIED FIXED

People

(Reporter: alfredkayser, Assigned: alfredkayser)

Details

Attachments

(1 file)

At line: http://lxr.mozilla.org/mozilla/source/netwerk/cache/src/nsDiskCacheMap.cpp#792 792 PRStatus err = PR_Close(mMapFD); The mMapFD is wrong, this should be 'fd' to close the file opened for writing/saving the metadata of that specific cache entry. Luckely, cacheEntry metadata never seems to be bigger than 16K so it always gets stored in a blockfile and not as a separate file. Never say never, and metadata could potentially be bigger than 16K, and then the diskCache code would fails miserably because the map file is closed. So, either fix the line to close the correct file, or remove the metadata as separate file for cache entries. The first is most simple and correct, the second reduces codesize (and dangers of unused/untested code) but adds a limit to metadata size of cacheEntries. P.s., not tested, but can someone enforce to have very big cacheEntry metadata and then so force the diskCache to crash?
Attachment #231063 - Flags: review?(darin)
Comment on attachment 231063 [details] [diff] [review] Fix to close the correct file handle wow, r=darin
Attachment #231063 - Flags: review?(darin) → review+
Attachment #231063 - Flags: superreview?(bzbarsky)
Attachment #231063 - Flags: superreview?(bzbarsky) → superreview+
Assignee: nobody → alfredkayser
Fixed on trunk. Do we need this on the 1.8 branch?
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
I think so, because this could potentially be a DOS issue.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: