Close the correct file descriptor.  Bug 346250, patch by Alfred Kayser <alfredkayser@nl.ibm.com>, r=darin, sr=bzbarsky